[tool.poetry]
name = "string_like_files"
version = "0.1.0"
description = "Handle strings like files in Python\u001b[3~\u001b[3~"
authors = ["Britodfbr <britodfbr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
